--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -115,6 +115,7 @@ body {
     font-size: 24pt;
     margin-bottom: 12pt;
     color: #000;
+    font-family: "GT Eesti Display", Arial, Helvetica, sans-serif;
   }
 
   .print-content {
@@ -131,6 +132,7 @@ body {
     page-break-after: avoid;
     margin-top: 20pt;
     margin-bottom: 10pt;
+    font-family: "GT Eesti Display", Arial, Helvetica, sans-serif;
   }
 
   .print-content p {
@@ -196,18 +198,21 @@ body {
     font-size: 24pt;
     margin-top: 20pt;
     margin-bottom: 12pt;
+    font-family: "GT Eesti Display", Arial, Helvetica, sans-serif;
   }
 
   .print-prose h2 {
     font-size: 20pt;
     margin-top: 18pt;
     margin-bottom: 10pt;
+    font-family: "GT Eesti Display", Arial, Helvetica, sans-serif;
   }
 
   .print-prose h3 {
     font-size: 16pt;
     margin-top: 16pt;
     margin-bottom: 8pt;
+    font-family: "GT Eesti Display", Arial, Helvetica, sans-serif;
   }
 
   .print-prose p {
